--- a/client/src/styles/Chat.css
+++ b/client/src/styles/Chat.css
@@ -3,30 +3,30 @@
 }
 
 .home{
+    font-family: 'Poppins', sans-serif;
     height: 100vh;
-    background-color: rgba(229, 247, 254, 0.509);
+    background-color: rgba(16, 15, 16, 0.86);
     display: flex;
     position: relative;
     /* top: 10vh; */
 }
 .home .sidebar{
+    font-family: 'Poppins', sans-serif;
+    color:rgb(28, 26, 26);
     flex: 1;
-    border-right: 1px solid #c3c4c5;
-    background-color: rgb(122, 170, 211);
+    border-right: 1px solid#18aad3;
+    background-color: rgba(255, 110, 6, 0.97);
 }
 .home .chat{
     flex:3;
 }
 
 
-
-
-
 /* Search bar */
 
 .search{
     width: 100%;
-    border-bottom: 1px solid #8fa1b5;
+    border-bottom: 1px solidrgb(241, 244, 249);
     
 }
 
@@ -38,12 +38,12 @@
     border-radius: 0.7rem;
     border: none;
     padding: 5px 10px ;
-    background-color: #bbd2e9;
+    background-color:rgb(254, 254, 254);
     position: relative;
     left: 19px;
 }
 .search input::placeholder{
-    color: #5581ae;
+    color:rgb(12, 13, 13);
 }
 
 .search .searchform{
@@ -64,11 +64,11 @@
     align-items: center;
     gap: 10px;
     padding: 10px;
-    color: rgb(221, 231, 239);
+    color: rgb(11, 10, 10);
     cursor: pointer;
 }
 .search .userInfo:hover{
-    background-color: rgb(37, 123, 176);
+    background-color: rgb(23, 184, 233);
 }
 
 .search .userInfo img{
@@ -79,7 +79,6 @@
 
 
 /* chats */
-
 .chats{
     height: calc(100%-200px);
     overflow-y: scroll;
@@ -92,7 +91,6 @@
 
 
 .chats .userInfo{
-   
     padding: 10px;
     color: rgb(240, 246, 251);
     cursor: pointer;
@@ -101,7 +99,7 @@
     gap: 10px;
 }
 .chats .userInfo:hover{
-    background-color: rgb(37, 123, 176);
+    background-color: rgb(0, 7, 7);
 }
 
 .chats .userInfo img{
@@ -123,19 +121,14 @@
 .chats .userInfo .userChatInfo p{
     font-size: 0.8rem;
     margin: 0;
-    color: #c5d2de;
+    color:rgb(255, 255, 255);
 }
 
-
-
-
 /* chat  */
-
-
-
 .chat .chatInfo{
+    font-family: 'Poppins', sans-serif;
     height: 10vh;
-    background-color: rgba(165, 199, 230, 0.377);
+    background-color: rgb(255, 255, 255);
     backdrop-filter: blur(15px);
     display: flex;
     align-items: center;
@@ -151,7 +144,7 @@
 }
 
 .chat .chatInfo span{
-    color: #066ecfba;
+    color:rgba(249, 94, 33, 0.99);
     font-weight: bolder;
     /* margin-left: 20px; */
 }
@@ -175,11 +168,13 @@
 
 
 .message{
+    font-family: 'Poppins', sans-serif;
     display: flex;
     gap:20px;
     margin-bottom: 5px;
 }
 .message .messageInfo{
+    font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     /* margin-top: 15px; */
@@ -192,7 +187,7 @@
 }
 .message .messageInfo span{
     font-size: 0.7rem;
-    color: #858a91;
+    color:rgb(255, 255, 255);
 }
 
 .message .messageContent{
@@ -207,7 +202,7 @@
     border-radius: 0.3rem;
 }
 .message .messageContent p{
-    background-color: #8aacda;
+    background-color:rgb(237, 73, 14);
     color: #ffffff;
     padding: 10px 15px;
     border-radius: 0 12px 12px 12px;
@@ -223,18 +218,13 @@
     align-items: flex-end;
 }
 .owner .messageContent p{
-    background-color: #6fb2ff;
-    color: #ffffff;
+    background-color:rgb(3, 119, 253);
+    color:rgb(255, 255, 255);
     padding: 10px 15px;
     border-radius: 12px 0px 12px 12px;
 }
 
-
-
-
-
 /* input typing */
-
 .input{
     height: 50px;
     width: 70%;
@@ -269,7 +259,7 @@
     cursor: pointer;
 }
 .input .send label:hover{
-    color: #6a6e73;
+    color:rgb(230, 235, 240);
 }
 
 .input .send button{
@@ -278,18 +268,15 @@
     font-size: 1rem;
     cursor: pointer;
     border: none;
-    background-color: #85bbee;
+    background-color:rgb(8, 11, 14);
     color: #f5faff;
     font-weight: bolder;
     border-radius: 3rem;
 }
 .input .send button:hover{
-    background-color: #59a7f1;
+    background-color:rgb(7, 106, 254);
     
 }
-
-
-
 /* mobile responsive */
 
 @media only screen and (max-width: 500px){
@@ -314,7 +301,7 @@
         margin-left: 15px;
     }
     .chat .backBtn span{
-        color: #bbbcbd;
+        color:rgb(249, 131, 20);
     }
 
     .chat .chatInfo img{
