--- a/client/src/styles/CreatePosts.css
+++ b/client/src/styles/CreatePosts.css
@@ -7,12 +7,13 @@
     top: 0;
     width: 100%; 
     height: 100%;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(11, 10, 10, 0.4);
 }
 
 .form-select{
-    background-color: rgba(0, 255, 255, 0);
-    color: rgba(8, 82, 147, 0.63);
+    background-color: rgba(255, 255, 255, 0);
+    font-weight:bold;
+    color: rgba(0, 0, 0, 0.92);
 }
 
 .createPostContainer{
@@ -25,9 +26,9 @@
     width: 30vw;
     height: fit-content;
     max-height: 90vh;
-    background-color: rgba(221, 236, 246, 0.616);
+    background-color: rgb(102, 201, 209);
     backdrop-filter: blur(20px);
-    border: 1px solid #b4b6b8;
+    border: 1px solidrgb(0, 0, 0);
     box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
 }
 
@@ -36,16 +37,16 @@
     position: relative;
     top: 0vh;
     right: 0vw;
-    color: rgb(106, 107, 107);
+    color: rgb(0, 5, 5);
     cursor: pointer;
     font-size: 1.2rem;
 }
 
 .createPostTitle{
-    font-family: 'Padauk', sans-serif;
-    font-size: 1.5rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight:bold;
     /* padding-bottom: 0.5rem; */
-    color: rgb(8, 82, 147);
+    color: rgb(255, 255, 255);
 }
 .createPostHr{
     margin: 0;
@@ -53,44 +54,63 @@
 }
 
 .uploadBox{
+
     width: 100%;
 }
 
 .uploadBox #uploadPostFile{
-    width: 100%;
-    color: rgba(8, 82, 147, 0.63);
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    color: rgba(1, 0, 0, 0.92);
 }
 #uploadPostFile::-webkit-file-upload-button {
     display: none;
   }
 #uploadPostFile::before {
+    font-family: 'Poppins', sans-serif;
     content: 'Upload Image/Video';
     display: inline-block;
-    background: linear-gradient(top, #f9f9f9, #e3e3e3);
-    border: 1px solid #c0c1c3;
+    background: linear-gradient(top,rgb(19, 15, 15), #e3e3e3);
+    border: 1px solidrgb(14, 14, 14);
     border-radius: 3px;
     padding: 5px 8px;
     outline: none;
     white-space: nowrap;
     -webkit-user-select: none;
     cursor: pointer;
-    font-weight: 500;
+    font-weight: bold;
     font-size: 10pt;
     margin-right: 10px;
   }
 
 
 
-
 .descriptionInput input{
-    border-color: #c0c1c3;
+    border-color:rgb(3, 3, 3);
     width: 100%;
+
 }
-.descriptionInput label, .postLocation label{
-    color: rgba(8, 82, 147, 0.63);
+.descriptionInput label{
+    font-weight:bold;
+    color: rgb(21, 21, 21);
+    font-family: 'Poppins', sans-serif;
+
+} 
+.postLocation input{
+    border-color:rgb(3, 3, 3);
+    width: 100%;
+
+}
+
+.postLocation label{
+    font-weight:bold;
+    color: rgb(12, 12, 12);
+    font-family: 'Poppins', sans-serif;
+
 }
 
 .createPostBody form{
+    font-family: 'Poppins', sans-serif;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -99,14 +119,13 @@
 .createPostBody form button{
     width: fit-content;
     border: none;
+    font-family: 'Poppins', sans-serif;
     padding: 8px 30px;
-    background-color: rgba(6, 112, 234, 0.479);
-    color: aliceblue;
-    font-weight: 500;
+    background-color: rgb(255, 255, 255);
+    color: rgba(8, 8, 8, 0.92);
+    font-weight: bold;
     border-radius: 0.4rem;
 }
-
-
 
 @media only screen and (max-width: 600px){
     .createPostContainer{
