--- a/client/src/styles/Notifications.css
+++ b/client/src/styles/Notifications.css
@@ -20,10 +20,10 @@
     width: 27vw;
     height: 70vh;
     max-height: 90vh;
-    background-color: rgba(246, 251, 254, 0.361);
+    background-color: rgb(246, 251, 254);
     backdrop-filter: blur(15px);
-    border: 1px solid #b4b6b8;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+    border: 1px solidrgb(12, 13, 15);
+    box-shadow: rgb(0, 0, 0) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
 }
 
 .closenotifications{
@@ -31,17 +31,19 @@
     position: relative;
     top: 0vh;
     right: 0vw;
-    color: rgb(106, 107, 107);
+    color: rgb(237, 38, 7);
     cursor: pointer;
     font-size: 1.2rem;
 }
 
 .notificationsTitle{
-    font-family: 'Padauk', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.5rem;
     /* padding-bottom: 0.5rem; */
     margin: 0px;
-    color: rgb(8, 82, 147);
+    color: rgb(250, 103, 17);
+        font-weight:bold;
+
 }
 .notificationsHr{
     margin: 0;
@@ -60,17 +62,17 @@
     height: fit-content;
     min-height: 20vh;
     width: 28vw;
-    border: 1px solid #c0c1c3;
+    border: 1px solidrgb(16, 16, 17);
     cursor: pointer;
     border-radius: 5px;
 }
 
 .descriptionInput input{
-    border-color: #c0c1c3;
+    border-color:rgb(9, 12, 20);
     width: 100%;
 }
 .descriptionInput label{
-    color: rgba(8, 82, 147, 0.63);
+    color: rgba(5, 5, 5, 0.89);
 }
 
 .notificationsBody form{
