--- a/client/src/styles/Posts.css
+++ b/client/src/styles/Posts.css
@@ -24,8 +24,6 @@
 }
 
 
-
-
 .Post
 {
     display: flex;
@@ -33,12 +31,12 @@
     padding: 1rem;
     z-index: 9;
     padding-bottom: 1rem;
-    background-color: rgba(255, 255, 255, 0.219);
+    background-color: rgba(12, 0, 0, 0.98);
     backdrop-filter: blur(10px);
     border-radius: 1rem;
     gap: 1rem;
     height: fit-content;
-    border: 1px solid rgba(188, 183, 183, 0.304);
+    border: 1px solid rgba(114, 118, 119, 0.99);
 
 }
 
@@ -60,22 +58,21 @@
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    border: 2px solid #68caf4;
+    border: 2px solidrgb(5, 144, 204);
 }
 .usernameTop{
     position: relative;
+    bold:2;
     top: 0.5vh;
     left: 0.5vw;
-    font-family: 'Padauk', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 1.2rem;
+    color:rgb(255, 255, 255);
 }
 #addFriendInPost{
     font-size: 1.5rem;
-    color: #088ec8;
+    color:rgb(229, 82, 18);
 }
-
-
-
 
 .postimg{
     width: 100%;
@@ -85,9 +82,6 @@
     align-items: center;
 }
 
-
-
-
 .postReact{
     display: flex;
     align-items: flex-start;
@@ -96,7 +90,7 @@
 }
 .reactbtn{
     font-size: 20px;
-    color: rgba(6, 98, 202, 0.705);
+    color: rgba(250, 18, 18, 0.93);
     cursor: pointer;
 }
 
@@ -113,13 +107,11 @@
 }
 .supportCount{
     font-size: 0.6rem;
-    font-family: 'Kanit', sans-serif;
-}
+    font-family: 'Poppins', sans-serif;}
 .place{
     padding-left: 0.6rem;
     font-size: 0.8rem;
-    font-family: 'Kanit', sans-serif;
-}
+    font-family: 'Poppins', sans-serif;}
 
 .datacol{
     display: flex;
@@ -135,9 +127,10 @@
     font-size: 1rem;
     font-weight: bold;
     position: relative;
+    color: rgb(250, 249, 248);
     top: -0.5vh;
     padding-left: 1vw;
-    font-family: 'Padauk', sans-serif;
+    font-family: 'Poppins', sans-serif;    
 }
 
 .desc, .identitydata{
@@ -152,14 +145,13 @@
     left: 0.5vw;
     display: flex;
     flex-wrap: wrap;
-    font-family: 'Noto Sans', sans-serif;
-}
+    color:rgb(255,255,255);
+    font-family: 'Poppins', sans-serif;}
 
 .datatitle{
     font-weight: bold;
     margin-left: 1vw;
-    font-family: 'Padauk', sans-serif;
-}
+    font-family: 'Poppins', sans-serif;}
 
 
 .commentsContainer{
@@ -170,6 +162,8 @@
 
 .commentsContainer h5{
    font-size: 1.1rem;
+   color: rgb(236, 59, 5);
+
 }
 .commentsBody{
     margin-left: 5%;
@@ -188,21 +182,23 @@
     display: flex;
     gap: 5px;
     align-items: center;
+    color: rgb(236, 59, 5);
+
     /* margin-top: 10px; */
 }
 .commentsContainer .makeComment input{
     padding: 5px;
     font-size: 0.8rem;
     height: 30px;
+
 }
 .commentsContainer .makeComment button{
     padding: 0px 10px 2px 10px;
     height: 30px;
     border: none;
+    
     font-size: 0.8rem;
 }
-
-
 
 @media screen and (max-width: 500px){
    
