--- a/client/src/styles/ProfilePage.css
+++ b/client/src/styles/ProfilePage.css
@@ -1,4 +1,5 @@
 .profilePage{
+    font-family: 'Poppins', sans-serif;
     height: 100vh;
     width: 100%;
     display: flex;
@@ -8,7 +9,7 @@
 .profileCard{
     width: 25vw;
     height: fit-content;
-    background-color: rgba(245, 255, 255, 0.591);
+    background-color: rgb(255, 255, 255);
     backdrop-filter: blur(10px);
     box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
     position: relative;
@@ -17,7 +18,7 @@
     border-radius: 1rem;
     margin-right: 30px;
     padding: 20px 0;
-
+    font-family: 'Poppins', sans-serif;
     /* display: flex; */
     display: none;
     flex-direction: column;
@@ -28,19 +29,24 @@
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    border: 3px solid rgba(56, 146, 188, 0.281);
+    border: 3px solid rgb(254, 254, 254);
 }
 
 .profileCard h4{
     margin: 0;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
     font-size: 1.2rem;
     margin: 10px 0 5px 0;
-    color: rgba(9, 57, 179, 0.763);
+    color: rgb(244, 132, 28);
+    bold:500;
 }
 
 .profileCard p{
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
     margin-bottom: 20px;
-    color: rgb(87, 100, 114);
+    color: rgb(18, 92, 160);
     text-align: center;
     width: 80%;
 }
@@ -56,7 +62,9 @@
 
 .profileDetailCounts p{
     margin: 0;
-    color: rgb(4, 32, 55);
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    color: rgb(6, 80, 75);
 }
 
 .profileControlBtns{
@@ -67,7 +75,7 @@
 .profileControlBtns button{
     width: 80px;
     border: none;
-    background-color: rgb(6, 116, 206);
+    background-color: rgb(9, 9, 10);
     color: aliceblue;
     padding: 3px 5px 5px 5px;
     border-radius: 0.3rem;
@@ -75,11 +83,12 @@
 
 
 .profileEditCard{
+    font-family: 'Poppins', sans-serif;
     width: 25vw;
     height: fit-content;
     background-color: rgba(245, 255, 255, 0.591);
     backdrop-filter: blur(10px);
-    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+    box-shadow: rgb(244, 104, 16) 0px 5px 15px 0px;
     position: relative;
     top: 12vh;
     left: 2vw;
@@ -91,16 +100,6 @@
     flex-direction: column;
     align-items: center;
 }
-
-
-
-
-
-
-
-
-
-
 
 
 .profilePostsContainer{
@@ -137,7 +136,7 @@
 }
 .followContainerHeader h4{
     font-size: 1.3rem;
-    color: rgba(3, 64, 134, 0.808);
+    color: rgba(253, 119, 16, 0.81);
     cursor: pointer;
 }
 
