--- a/client/src/styles/Stories.css
+++ b/client/src/styles/Stories.css
@@ -7,17 +7,19 @@
     border-radius: 0.8rem;
     padding: 1.2rem;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    font-family: 'Exo 2', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .storiesTitle{
     height: 12%;
+    
 }
 
 .storiesTitle h3{
     margin: 0px;
-    font-weight: 600;
-    color: rgba(1, 90, 163, 0.824);
+    font-weight: 550;
+    font-family: 'Poppins', sans-serif;
+    color: rgba(253, 115, 17, 0.82);
 }
 .storiesTitle hr{
     margin: 7px 0;
@@ -25,7 +27,7 @@
 }
 
 .storiesBody{
-    height: 88%;
+    height: 100%;
     width: 100%;
     overflow-y: scroll;
     justify-content: center;
@@ -46,6 +48,7 @@
     /* border-radius: 0.7rem; */
     height: 120px;
     cursor: pointer;
+    font-family: 'Poppins', sans-serif;
     overflow: hidden;
     background-position: center;
     background-repeat: no-repeat;
@@ -59,11 +62,12 @@
 }
 
 .storiesBody .story p{
+    font-family: 'Poppins', sans-serif;
     text-align: center;
     position: relative;
     top: -20%;
     width: 100%;
-    background-color: rgba(0, 90, 131, 0.491);
+    background-color: rgba(2, 10, 14, 0.49);
     color: #d5d3d3;
     height: 20%;
 }
@@ -77,23 +81,23 @@
 }
 
 
-
-
 .storyPlayContainer{
     height: 88%;
     width: 100%;
-    background-color: rgba(9, 128, 225, 0.71);
+    background-color: rgba(18, 114, 192, 0.71);
     border-radius: 0.8rem;
     padding: 3%;
     overflow: hidden;
 }
 
 .storyPlayBodyTop{
+    font-family: 'Poppins', sans-serif;
+    font-weight:bold;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding-right: 3%;
-    color: #f4f4f4;
+    color:rgb(9, 9, 9);
     margin-bottom: 5px;
 }
 .storyPlayBodyTop p{
@@ -102,8 +106,6 @@
 .storyPlayBodyTop span{
     cursor: pointer;
 }
-
-
 
 .storyPlayBodyContent img{
     width: 100%;
@@ -116,11 +118,13 @@
     border-radius: 0.8rem;
 }
 .storyPlayBodyContent p{
+    font-weight:bold;
+    font-family: 'Poppins', sans-serif;
     position: relative;
     top: -7vh;
     text-align: center;
     width: 100%;
     background-color: rgba(49, 47, 45, 0.374);
     height: fit-content;
-    color: #f4f4f4;
+    color:rgb(22, 20, 20);
 }
